[package]
name = "balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" }
futures = "0.3.24"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]

[default.databases.balance]
url = "mongodb://root:example@127.0.0.1:27017/balance?directConnection=true&serverSelectionTimeoutMS=2000&authSource=admin"
